ingress/nemo-datastore/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nemo-datastore-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: nemo-datastore.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nemo-datastore 
                port:
                  number: 3000
